--- a/all.css
+++ b/all.css
@@ -1,1 +1,35 @@
+*{
+    margin: 0;
+    padding: 2;
+    box-sizing: border-box;
+}
+.navbar{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+nav{
+flex: 1;
+text-align: right;
+text-decoration-line: none;
 
+}
+nav ul{
+    display: inline-block;
+    list-style-type: none;
+}
+
+nav ul li{
+    display: inline-block;
+    margin-right: 20px;
+}
+a{
+    text-decoration: none;
+    color: #125372;;
+}
+.main{
+    max-width: 1300px;
+    margin: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
