--- a/css/all.css
+++ b/css/all.css
@@ -38,14 +38,29 @@ nav ul li a{
 .logo{
     padding: 0.5px 10px 0.5px 10px;
 }
-.container{
-    height: 10px;
-    width: 10px;
-    background: aliceblue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.fa-solid{
-    color: #125372;
-}
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .search-container {
+    margin: 20px;
+  }
+  
+  #searchInput {
+    padding: 10px;
+    width: 200px;
+  }
+  
+  #itemList {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  #itemList li {
+    padding: 10px;
+    margin: 5px;
+    border: 1px solid #ddd;
+    background-color:#f9f9f9;
+  }
