--- a/css/all.css
+++ b/css/all.css
@@ -64,3 +64,20 @@ body {
     border: 1px solid #ddd;
     background-color:#f9f9f9;
   }
+  /* Responsive styles */
+  @media screen and (max-width: 600px) 
+  {
+    .navbar .logo,
+    .nav-list 
+    {
+      text-align: center;
+      width: 100%;
+      float: none;
+    }
+  
+    .nav-list li 
+    {
+      display: block;
+      margin: 10px 0;
+    }
+  }
