--- a/css/all.css
+++ b/css/all.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     padding: 0px;
-    background-color: aliceblue;
+    background-color: rgb(97, 112, 103);
 }
 nav{
     flex: 1;
@@ -65,7 +65,7 @@ body {
     background-color:#f9f9f9;
   }
   /* Responsive styles */
-  @media screen and (max-width: 600px) 
+  @media screen and (max-width: 100px) 
   {
     .navbar .logo,
     .nav-list 
