--- a/css/all.css
+++ b/css/all.css
@@ -68,8 +68,7 @@ body {
   @media screen and (max-width:1300px) 
   {
     .logo 
-    .navbar
-    .nav,
+    .navbar,
     .main
     {
       text-align: center;
