--- a/css/all.css
+++ b/css/all.css
@@ -67,8 +67,7 @@ body {
   /* Responsive styles */
   @media screen and (max-width:1300px) 
   {
-    .logo 
-    .navbar
+    .logo  .navbar
     .nav,
     .main
     {
