--- a/css/all.css
+++ b/css/all.css
@@ -9,7 +9,7 @@
     padding: 0px;
     background-color: aliceblue;
 }
-.nav{
+nav{
     flex: 1;
     text-align: right;
     text-decoration-line: none;
