--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 .navbar {
     display: flex;
     padding: 0px;
-    background-color: rgb(231, 200, 200);
+    background-color: rgb(137, 151, 146);
     flex: 1;
-    text-align: ;
+    text-align: 1;
     text-decoration-line: none;
 
 }
@@ -47,13 +47,3 @@
   
     
   }
-<<<<<<< Updated upstream
-  
-
-.extra {
-    width: 100vw;
-    height: 0.2rem;
-}
-=======
-  
->>>>>>> Stashed changes
