--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     text-decoration-line: none;
 
 }
-  
+
 .navbar .logo {
     padding: 0.5px 10px 0.5px 10px;
     padding: 5px;
@@ -36,6 +36,30 @@
     padding-right: 10px;
 }
   
+.extra{
+  padding: 0.1%;
+}
+
+.homeimg info{
+  margin-left: 1%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Responsive styles */
   @media screen and (max-width: 600px) {
     .navbar .logo,
