--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
-
 .header{
+  background-color: rgb(117, 142, 138);
+  width: 100vw;
+  height: 8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: -webkit-sticky;
   position: sticky;
-
+  top: 0rem;
 }
 .navbar {
     display: flex;
