--- a/styles.css
+++ b/styles.css
@@ -89,24 +89,87 @@
 .header row{ 
   margin-top: 70px;
 }
-.categories{
-  margin: 30px 0;
+
+.img_main {
+  width: 100vw;
+  height: auto;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
-.col-3{
-  flex-basis: 30%; 
-  min-width: 100px; 
-  margin-bottom: 30px;
+
+.img_main .img_heading {
+  letter-spacing: 0.1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
-.col-3 img{
-  width: 20%;
-  height: 20%;
+
+.img_main .img_heading .headinggg {
+  width: 70vw;
+  padding: 3rem 1rem 1rem 0rem;
+  color: #000000;
 }
-small-container{
-  max-width: 1080px;
-  margin: auto;
-  padding-left:25px;
-  padding-right: 25px;
-  }
+
+.img_main .img_heading .headinggg h1 {
+  font-weight: 400;
+}
+
+.img_main .img_container {
+  width: 100vw;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.img_main .img_container .img_2nd_con {
+  width: 80vw;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.img_main .img_container .img_2nd_con .image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin: 2rem;
+}
+
+.img_main .img_container .img_2nd_con .image .img {
+  font-size: 1.2rem;
+  text-align: center;
+  border: 1.5px solid #969090;
+}
+
+.img_main .img_container .img_2nd_con .image .img img {
+  width: 20rem;
+  height: 15rem;
+}
+
+.img_main .img_container .img_2nd_con .image .img p {
+  padding: 1rem;
+  color: rgb(0, 0, 0);
+}
+
+
+
+
 
 /* Responsive styles */
   @media screen and (max-width: 600px) {
