--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,81 @@
 }
 
 
+
+
+.upcomming {
+  width: 100vw;
+  height: auto;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.upcomming .img_heading {
+  letter-spacing: 0.1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.upcomming .img_heading .headinggg {
+  width: 70vw;
+  padding: 3rem 1rem 1rem 0rem;
+  color: #000000;
+}
+
+.upcomming .img_heading .headinggg h1 {
+  font-weight: 400;
+}
+
+.upcomming .img_container {
+  width: 100vw;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.upcomming .img_container .img_2nd_con {
+  width: 80vw;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.upcomming .img_container .img_2nd_con .image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin: 2rem;
+}
+
+.upcomming .img_container .img_2nd_con .image .img {
+  font-size: 1.2rem;
+  text-align: center;
+  border: 1.5px solid #969090;
+}
+
+.upcomming .img_container .img_2nd_con .image .img img {
+  width: 20rem;
+  height: 15rem;
+}
+
+
 /* Responsive styles */
   @media screen and (max-width: 600px) {
     .navbar .logo,
