--- a/styles.css
+++ b/styles.css
@@ -43,15 +43,12 @@
     
   }
 
-/* header */ 
+/* header row */ 
 
 .header row{ 
   margin-top: 70px;
 }
 
-/*header */
-
-/* header over */ 
 
 /* home main */
 .main{
@@ -92,14 +89,15 @@
 }
 
 .img_main .img_container {
-  width: 100vw;
+  /* width: 100vw;
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
+  justify-content: center; */
+
 }
 
 .img_main .img_container .img_2nd_con {
